# greentic-mcp-client

./: Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
ci/: local_check.sh
src/: auth.rs  client.rs  error.rs  lib.rs  proto.rs
tests/: client_http.rs
